--- a/text/bandersnatch.tex
+++ b/text/bandersnatch.tex
@@ -6,7 +6,7 @@ The singly-contextualized Bandersnatch Schnorr-like signatures $\bandersig{k}{c}
 
 \begin{align}
   \bandersig{k \in \H_B}{c \in \H}{m \in \Y} \subset \Y_{96} &\equiv \{ x \mid x \in \Y_{96}, \text{verify}(k, c, m, x) = \top \}  \\
-  \banderout{s \in \bandersig{k}{c}{m}} \in \H &\equiv \text{output}(x \mid x \in \bandersig{k}{c}{m})
+  \banderout{s \in \bandersig{k}{c}{m}} \in \H &\equiv \text{output}(x \mid x \in \bandersig{k}{c}{m})_{\dots32}
 \end{align}
 
 The singly-contextualized Bandersnatch Ring\textsc{vrf} proofs $\bandersnatch{r}{c}{m}$ are a zk-\textsc{snark}-enabled analogue utilizing the Pedersen \textsc{vrf}, also defined by \cite{hosseini2024bandersnatch} and further detailed by \cite{cryptoeprint:2023/002}.
@@ -14,7 +14,7 @@ The singly-contextualized Bandersnatch Ring\textsc{vrf} proofs $\bandersnatch{r}
 \begin{align}
   \mathcal{O}(\seq{\H_B}) \in \Y_R &\equiv \text{KZG\_commitment}(\seq{\H_B})  \\
   \bandersnatch{r \in \Y_R}{c \in \H}{m \in \Y} \subset \Y_{784} &\equiv \{ x \mid x \in \Y_{784}, \text{verify}(r, c, m, x) = \top \}  \\
-  \banderout{p \in \bandersnatch{r}{c}{m}} \in \H &\equiv \text{output}(x \mid x \in \bandersnatch{r}{c}{m})
+  \banderout{p \in \bandersnatch{r}{c}{m}} \in \H &\equiv \text{output}(x \mid x \in \bandersnatch{r}{c}{m})_{\dots32}
 \end{align}
 
 Note that in the case a key $\H_B$ has no corresponding Bandersnatch point when constructing the ring, then the Bandersnatch \emph{padding point} as stated by \cite{hosseini2024bandersnatch} should be substituted.
