--- a/text/header.tex
+++ b/text/header.tex
@@ -51,7 +51,7 @@ All blocks have an associated public key to identify the author of the block. We
 
 If not $\none$, then the epoch marker specifies key and entropy relevant to the following epoch in case the ticket contest does not complete adequately (a very much unexpected eventuality). Similarly, the winning-tickets marker, if not $\none$, provides the series of 600 slot sealing ``tickets'' for the next epoch (see the next section). Finally, the offenders marker is the sequence of Ed25519 keys of newly misbehaving validators, to be fully explained in section \ref{sec:disputes}. Formally:
 \begin{equation}
-  \mathbf{H}_e \in \tuple{\H\ts\H\ts\lseq\H_B\rseq_{\mathsf{V}}}\bm{?}\,,\quad
+  \mathbf{H}_e \in \tuple{\H\ts\H\ts\lseq\tup{\H_B, \H_E}\rseq_{\mathsf{V}}}\bm{?}\,,\quad
   \mathbf{H}_w \in \seq{\mathbb{C}} _{\mathsf{E}}\bm{?}\,,\quad
   \mathbf{H}_o \in \seq{\H_E}
 \end{equation}
