--- a/graypaper.tex
+++ b/graypaper.tex
@@ -29,7 +29,7 @@
 \input{text/judgments.tex}
 \input{text/reporting_assurance.tex}
 \input{text/accumulation.tex}
-\input{text/ratings.tex}
+\input{text/statistics.tex}
 \input{text/work_packages_and_reports.tex}
 \input{text/guaranteeing.tex}
 \input{text/assurance.tex}
