--- a/preamble.tex
+++ b/preamble.tex
@@ -176,6 +176,7 @@
 \newcommand*{\wr¬srlookup}{\mathbf{l}}
 \newcommand*{\wr¬authoutput}{\mathbf{o}} % TODO: Consider renaming to \mathbf{u} to free up \mathbf{o}
 \newcommand*{\wr¬results}{\mathbf{r}} % TODO: Consider renaming to avoid overloading \mathbf{r} reports vs results; maybe \mathbf{t} for results
+\newcommand*{\wr¬authgasused}{g}
 
 % TODO: Standardize and fully check this:
 % p P: work Packages
