--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -31,7 +31,8 @@ A work-report, of the set $\mathbb{W}$, is defined as a tuple of the work-packag
     \isa{a}{\H},\\
     &\isa{\wr¬authoutput}{\Y},\ 
     \isa{\wr¬srlookup}{\dict{\H}{\H}},\ 
-    \isa{\wr¬results}{\seq{\mathbb{L}}_{1:\mathsf{I}}}
+    \isa{\wr¬results}{\seq{\mathbb{L}}_{1:\mathsf{I}}},\ 
+    \isa{\wr¬authgasused}{\N_G},\ 
   \end{aligned}
 }
 \end{equation}
@@ -72,18 +73,33 @@ The \emph{segment-root} ($e$) is the root of a constant-depth, left-biased and z
 \subsubsection{Work Result}
 We finally come to define a \emph{work result}, $\mathbb{L}$, which is the data conduit by which services' states may be altered through the computation done within a work-package.
 
-\begin{equation}\label{eq:workresult}
-  \mathbb{L} \equiv (s \in \N_S, c \in \H, y \in \H, g \in \N_G, \wl¬data \in \Y \cup \mathbb{J})
-\end{equation}
+\begin{align}\label{eq:workresult}
+  \mathbb{L} &\equiv \tuple{
+    \begin{aligned}
+      &\isa{s}{\N_S}\,,\;
+      \isa{c}{\H}\,,\;
+      \isa{y}{\H}\,,\;
+      \isa{g}{\N_G}\,,\;
+      \isa{\wl¬data}{\Y \cup \mathbb{J}}\,,\;\\
+      &\isa{u}{\N_G}\,,\; % gas_used: UnsignedGas,
+      \isa{i}{\N}\,,\; % imports: u16,
+      \isa{x}{\N}\,,\; % extrinsic_count: u16,
+      \isa{z}{\N}\,,\; % extrinsic_size: u32,
+      \isa{e}{\N} % exports: u16,
+    \end{aligned}
+  }
+\end{align}
 
 Work results are a tuple comprising several items. Firstly $s$, the index of the service whose state is to be altered and thus whose refine code was already executed. We include the hash of the code of the service at the time of being reported $c$, which must be accurately predicted within the work-report according to equation \ref{eq:reportcodesarecorrect};
 
 Next, the hash of the payload ($y$) within the work item which was executed in the refine stage to give this result. This has no immediate relevance, but is something provided to the accumulation logic of the service. We follow with the gas prioritization ratio $g$ used when determining how much gas should be allocated to execute of this item's accumulate.
 
-Finally, there is the actual output datum or error of the execution of the code $\wl¬data$, which may be either an octet sequence in case it was successful, or a member of the set $\mathbb{J}$, if not. This latter set is defined as the set of possible errors, formally:
+There is the actual output datum or error of the execution of the code $\wl¬data$, which may be either an octet sequence in case it was successful, or a member of the set $\mathbb{J}$, if not. This latter set is defined as the set of possible errors, formally:
 \begin{equation}
   \mathbb{J} \in \{ \oog, \panic, \badexports, \token{BAD}, \token{BIG} \}
 \end{equation}
+
+Finally, we have five fields describing the level of activity which this workload imposed on the core in bringing the output datum to bear. We include $u$ the actual amount of gas used during refinement; $i$ and $e$ the number of segments imported from, and exported into, the Segments DA respectively; and $x$ and $z$ the number of, and total size in octets of, the extrinsics used in computing the workload. See section \ref{sec:workpackagesandworkreports} for more information on the meaning of these values.
 
 The first two are special values concerning execution of the virtual machine, $\oog$ denoting an out-of-gas error and $\panic$ denoting an unexpected program termination. Of the remaining three, the first indicates that the number of exports made was invalidly reported, the second indicates that the service's code was not available for lookup in state at the posterior state of the lookup-anchor block. The third indicates that the code was available but was beyond the maximum size allowed $\mathsf{W}_C$.
 
