No service should be able to use more gas than given

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -175,19 +175,19 @@ We define $\Psi_A$, the Accumulation invocation function as:
         \mathbf{y}_\mathbf{u},
         \mathbf{y}_\mathbf{t},
         \mathbf{y}_y,
-        g - r
+        g - \max(r, 0)
       } & \when \mathbf{o} \in \{\oog, \panic\} \\
       \tup{
         \mathbf{x}_\mathbf{u},
         \mathbf{x}_\mathbf{t},
         \mathbf{o},
-        g - r
+        g - \max(r, 0)
       } & \otherwhen \mathbf{o} \in \H \\
       \tup{
         \mathbf{x}_\mathbf{u},
         \mathbf{x}_\mathbf{t},
         \mathbf{x}_y,
-        g - r
+        g - \max(r, 0)
       } & \otherwise \\
     \end{cases}
   \end{aligned}\right.
