More finesse for accumulation stats

--- a/preamble.tex
+++ b/preamble.tex
@@ -140,6 +140,7 @@
 \newcommand*{\tuple}[1]{\ltuple#1\rtuple}
 \newcommand*{\floor}[1]{\left\lfloor#1\right\rfloor}
 \newcommand*{\ceil}[1]{\left\lceil#1\right\rceil}
+\newcommand*{\len}[1]{\left|#1\right|}
 \newcommand*{\fnfrac}[2]{\left\lfloor\nicefrac{#1}{#2}\right\rfloor}
 \newcommand*{\ffrac}[2]{\left\lfloor\frac{#1}{#2}\right\rfloor}
 \newcommand*{\transpose}{{}^\text{T}}
