Accumulate the accumulation & on-transfer activity into statistics

--- a/text/statistics.tex
+++ b/text/statistics.tex
@@ -118,13 +118,15 @@ Finally, the service statistics are updated using the same intermediate values a
       \is{&z&}{R(s)_z}\,,\\
       \is{e&}{R(s)_e}\,,\;
       \is{&r&}{\span\span\tup{R(s)_n, R(s)_u}}\,,\;\\
-      \is{p&}{\span\span \textstyle \sum_{\tup{s, \mathbf{p}} \in \mathbf{E}_P} \tup{1, |\mathbf{p}|}}
+      \is{p&}{\span\span \textstyle \sum_{\tup{s, \mathbf{p}} \in \mathbf{E}_P} \tup{1, |\mathbf{p}|}}\,,\;\\
+      \is{a&}{\span\span \subifnone(\mathbf{I}[s], \tup{0, 0})}\,,\; \ \ \\
+      \is{t&}{\span\span \subifnone(\mathbf{X}[s], \tup{0, 0})} \quad\\
     \end{alignedat}
   }\!\!\!\!\\
-  \where \mathbf{s} &= \mathbf{r} \cup \mathbf{p} \cup \mathbf{a} \cup \mathbf{t}\\
-  \also \mathbf{r} &= \{r_s: r \in w_\mathbf{r}, w \in \mathbf{w} \}\\
+  \where \mathbf{s} &= \mathbf{r} \cup \mathbf{p} \cup \keys{\mathbf{I}} \cup \keys{\mathbf{X}}\\
+  \also \mathbf{r} &= \{r_s \mid r \in w_\mathbf{r}, w \in \mathbf{w} \}\\
+  \also \mathbf{p} &= \{s \mid \exists x: \tup{s, x} \in \mathbf{E}_P \}\\
   \also R(s \in \N_S) &\equiv \!\!\!\!\!\!\!\!\!\!\!
     \sum_{r \in w_\mathbf{r}, w \in \mathbf{w}, r_s = s}\!\!\!\!\!\!\!\!\!\!\!
-    \tup{\is{n}{1}, r_u, r_i, r_x, r_z, r_e}\\
-  \also 
+    \tup{\is{n}{1}, r_u, r_i, r_x, r_z, r_e}
 \end{align}
