--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -258,7 +258,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
 \begin{description}
   \item[$\mathsf{A} = 8$] The period, in seconds, between audit tranches.
   \item[$\mathsf{B}_I = 10$] The additional minimum balance required per item of elective service state.
-  \item[$\mathsf{B}_L = 1$] The additional minimum balance required per octet of elective service state.
+  \item[$\mathsf{B}_O = 1$] The additional minimum balance required per octet of elective service state.
   \item[$\mathsf{B}_S = 100$] The basic minimum balance which all services require.
   \item[$\mathsf{C} = 341$] The total number of cores.
   \item[$\mathsf{D} = 28,800$] The period in timeslots after which an unreferenced preimage may be expunged.
