--- a/text/overview.tex
+++ b/text/overview.tex
@@ -115,7 +115,7 @@ We further presume that a number of constant \emph{prices} stated in terms of to
 
 \begin{description}\label{eq:prices}
   \item[$\mathsf{B}_I$] the additional minimum balance implied for a single item within a mapping.
-  \item[$\mathsf{B}_L$] the additional minimum balance implied for a single octet of data within a mapping.
+  \item[$\mathsf{B}_O$] the additional minimum balance implied for a single octet of data within a mapping.
   \item[$\mathsf{B}_S$] the minimum balance implied for a service.
 \end{description}
 
