PVM: Fix Host-call instruction counter value

--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -734,10 +734,7 @@ An extended version of the \textsc{pvm} invocation which is able to progress an 
         &\varepsilon' = \host \times h\\[2pt]
         &\fault \times a = f(h, \gascounter', \registers', \mem', \mathbf{x})\\[2pt]
       \end{aligned}\right.\\[10 pt]
-      \begin{aligned}
-        &\Psi_H(\mathbf{c}, \imath'', \gascounter'', \registers'', \mem'', f, \mathbf{x}'')\\[2pt]
-        &\quad\where\imath'' = \imath' + 1 + \Fskip(\imath')\\
-      \end{aligned}
+      \Psi_H(\mathbf{c}, \imath', \gascounter'', \registers'', \mem'', f, \mathbf{x}'')
        &\when \bigwedge\left\{\;\begin{aligned}
         &\varepsilon' = \host \times h\\[2pt]
         &(\continue, \gascounter'', \registers'', \mem'', \mathbf{x}'') = f(h, \gascounter', \registers', \mem', \mathbf{x})
